# wsjcpp-arguments

./: .gitignore  CMakeLists.txt  README.md  clean.sh  wsjcpp.yml
scripts.wsjcpp/: generate.WSJCppArgumentProcessor
src/: argument_processor_main.cpp  argument_processor_main.h  main.cpp  wsjcpp_arguments.cpp  wsjcpp_arguments.h
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/wsjcpp-core/: wsjcpp_core.h
src.wsjcpp/wsjcpp_core/: wsjcpp.hold.yml  wsjcpp_core.cpp  wsjcpp_core.h
src/ArgumentProcessors/: argument_processor_main.cpp  argument_processor_main.h
unit-tests/: .gitignore  CMakeLists.txt
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_arguments_with_params.cpp  unit_test_arguments_with_params.h  unit_test_simple_arguments.cpp  unit_test_simple_arguments.h
unit-tests/src/: unit_test_arguments_with_params.cpp  unit_test_arguments_with_params.h  unit_test_simple_arguments.cpp  unit_test_simple_arguments.h  unit_tests.cpp
